# powera-mac-mapper

./: Cargo.toml  Makefile  README.md
mappings/: default.json  retrogames.cc.json
src/: lib.rs  main.rs  mapping.rs
